--- a/Qt/mainwindow.ui
+++ b/Qt/mainwindow.ui
@@ -81,7 +81,7 @@
        </rect>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="ByLifeGuardTab">
        <attribute name="title">
@@ -125,6 +125,19 @@
          <string>Take Report</string>
         </property>
        </widget>
+       <widget class="QLabel" name="reportByLifeGuardText">
+        <property name="geometry">
+         <rect>
+          <x>350</x>
+          <y>130</y>
+          <width>171</width>
+          <height>16</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
       </widget>
       <widget class="QWidget" name="ByDateTab">
        <attribute name="title">
@@ -149,6 +162,9 @@
          </item>
          <item row="0" column="1">
           <widget class="QDateEdit" name="ByDateStart">
+           <property name="calendarPopup">
+            <bool>true</bool>
+           </property>
            <property name="date">
             <date>
              <year>2014</year>
@@ -167,6 +183,9 @@
          </item>
          <item row="1" column="1">
           <widget class="QDateEdit" name="ByDateEnd">
+           <property name="calendarPopup">
+            <bool>true</bool>
+           </property>
            <property name="date">
             <date>
              <year>2014</year>
@@ -189,6 +208,22 @@
         </property>
         <property name="text">
          <string>Take Report</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="reportByDateText">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="geometry">
+         <rect>
+          <x>340</x>
+          <y>130</y>
+          <width>171</width>
+          <height>16</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string/>
         </property>
        </widget>
       </widget>
@@ -221,7 +256,7 @@
          </item>
         </layout>
        </widget>
-       <widget class="QPushButton" name="TakeReportByLifeGuard_2">
+       <widget class="QPushButton" name="TakeReportBySwimmer">
         <property name="geometry">
          <rect>
           <x>210</x>
@@ -232,6 +267,22 @@
         </property>
         <property name="text">
          <string>Take Report</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="reportBySwimmerText">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="geometry">
+         <rect>
+          <x>330</x>
+          <y>130</y>
+          <width>171</width>
+          <height>16</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string/>
         </property>
        </widget>
       </widget>
