Logout has been modified.
Logout is working now.

--- a/Qt/mainwindow.ui
+++ b/Qt/mainwindow.ui
@@ -299,7 +299,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Hi, Mr. Cem !</string>
+     <string/>
     </property>
    </widget>
    <widget class="QPushButton" name="logoutButton">
